3: response_time_analysis

--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -6,7 +6,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item このセクションでは, 最初に定理 1 と定理 2 の方法を, 合成ワークロードとケーススタディの両方で実験を行うことによって評価する
+        \item このセクションでは, 最初にTheorem 1 とTheorem 2 の方法を, 合成ワークロードとケーススタディの両方で実験を行うことによって評価する
 \item 次に, マルチスレッドエグゼキュータとシングルスレッドエグゼキュータのリアルタイムパフォーマンスを比較する
 \item 特に, マルチスレッドのエグゼキュータによってスケジュールされたチェーンの応答時間は, シングルスレッドのエグゼキュータよりもさらに悪い可能性があることを示している
     \end{itemize}
@@ -33,8 +33,8 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item (3) 相互に排他的なグループの数 $\left|\bigcup_{\forall \mathcal{C}_{i} \in \Gamma} \theta_{i}\right|$ は, $g$ をパラメーターとして $[0, g]$ の範囲内でランダムに選択され, 相互に排他的なグループ内のコールバックの総数は, $\alpha$ が $[0.1,1]$ に収まる比率である $\alpha \sum_{i=1}^{|\Gamma|}\left|\mathcal{C}_{i}\right|$ によって決定される
-\item 相互コールバックグループのコールバックは, すべてのコールバックからランダムに選択され, 相互に排他的な各コールバックグループに分散される
+        \item (3) mutually exclusiveグループの数 $\left|\bigcup_{\forall \mathcal{C}_{i} \in \Gamma} \theta_{i}\right|$ は, $g$ をパラメーターとして $[0, g]$ の範囲内でランダムに選択され, mutually exclusiveグループ内のコールバックの総数は, $\alpha$ が $[0.1,1]$ に収まる比率である $\alpha \sum_{i=1}^{|\Gamma|}\left|\mathcal{C}_{i}\right|$ によって決定される
+\item 相互コールバックグループのコールバックは, すべてのコールバックからランダムに選択され, mutually exclusive各コールバックグループに分散される
 \item 残りのコールバックはすべてreentrantコールバックグループに割り当てられる
 \item (4) 各コールバックの優先度は, セット $\left\{1,2, \cdots, \sum_{i=1}^{|\Gamma|}\left|\mathcal{C}_{i}\right|\right\}$ からランダムに選択された一意の ID に従う
 \item 数値が小さいほど, 優先度が高くなる
@@ -46,9 +46,9 @@
         \item 各構成 (各図の $\mathrm{x}$ 軸上の 1 点に対応) に対して, 500 のタスクシステムを生成する
 \item 次の方法のパフォーマンスを比較する
               \begin{itemize}
-                  \item  OUR-1: 定理 3 と定理 1 によって実行されるスケジュール可能性テスト
+                  \item  OUR-1: Theorem 3 とTheorem 1 によって実行されるスケジュール可能性テスト
 
-                  \item  OUR-2: 定理 3 と定理 2 によって実行されるスケジュール可能性テスト
+                  \item  OUR-2: Theorem 3 とTheorem 2 によって実行されるスケジュール可能性テスト
 
                   \item  SIMU: すべてのチェーンが最初のインスタンスを同時にリリースし, 各チェーンができるだけ早くインスタンスをリリースし, 各コールバックインスタンスが WCET に対して実行されると仮定した場合の, シミュレーションでの各チェーンの観測された最大応答時間
 \item シミュレーションは 5000 時間単位続きます
@@ -67,7 +67,7 @@
 \item 図 6.(a) は, 異なる $U_{\text {norm }}$ でのすべてのテストの合格率を示している
 \item 図 6.(b) は, 異なる $n$ での受け入れ率を評価したものである
 \item 図 6.(c) では, 異なる $b$ でチェーンが生成される
-\item 図 6.(d) では, 異なる数の相互に排他的なコールバックグループを生成する
+\item 図 6.(d) では, 異なる数のmutually exclusive コールバックグループを生成する
 \item 図 6.(e) では, 異なる $\alpha$ を使用してシステムを生成する
 \item 図 6.(f)
 \item システムは異なる数のスレッドで生成される
@@ -86,7 +86,7 @@
 \item 単純な改善は, 「キャリーイン」と「キャリーアウト」のコールバックインスタンスのすべての組み合わせを考慮して, 干渉している各チェーン $\mathcal{C}_{k}$ のより正確な $\overrightarrow{\mathcal{M}}_{k}$ を取得することである (本論文では, これは最大数のチェーンインスタンス全体を含むと想定されている)
 \item より厳しい応答時間の境界を取得する (スペースの制限のため, ここではアルゴリズムを提示しないが, 直感を示す)
 \item また, より正確なテストを導出するために, より多くの制約を作成することもできる
-\item これは, 私たちの方法で簡単に拡張できる
+\item これは, 本論文の方法で簡単に拡張できる
 \item これらの改善については, 今後の作業で検討する
     \end{itemize}
 \end{frame}
@@ -116,19 +116,19 @@
     \begin{itemize}
         \item 最初のケーススタディは, Choi らによって開発された図 10 のサブチェーンから引用されている
 \item [13] の現実的な自動運転システムから
-\item すべてのコールバックは, 再入可能なコールバックグループにあると見なされる
-\item 定理 2 によって各チェーンの応答時間の限界を計算する (システムは定理 3 に従ってスケジュール可能である)
+\item すべてのコールバックは, reentrant コールバックグループにあると見なされる
+\item Theorem 2 によって各チェーンの応答時間の限界を計算する (システムはTheorem 3 に従ってスケジュール可能である)
 \item 結果を表ＶＩに示す
 \item マルチスレッドエグゼキュータによってスケジュールされた各チェーンの応答時間は, シングルスレッドエグゼキュータよりもはるかに短いことが分かる
-\item さらに, 私たちの方法は安全であり, 測定された下限から遠く離れていない.
+\item さらに, 本論文の方法は安全であり, 測定された下限から遠く離れていない.
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 私たちが観察した興味深い問題は, マルチスレッドのエグゼキュータによってスケジュールされたチェーンの応答時間が, シングルスレッドのエグゼキュータよりもはるかに遅くなる可能性があることである
-\item 特に, すべてのコールバックが相互に排他的な同じグループにある場合でも, すべてのコールバックが強制的に順次実行されるマルチスレッドエグゼキュータでのスケジューリングは, シングルスレッドエグゼキュータでのスケジューリングとは大きく異なる 2 番目のケーススタディを使用して問題を示す
-\item すべてのコールバックは, 相互に排他的な同じグループに割り当てられる
+        \item 本論文が観察した興味深い問題は, マルチスレッドのエグゼキュータによってスケジュールされたチェーンの応答時間が, シングルスレッドのエグゼキュータよりもはるかに遅くなる可能性があることである
+\item 特に, すべてのコールバックがmutually exclusive同じグループにある場合でも, すべてのコールバックが強制的に順次実行されるマルチスレッドエグゼキュータでのスケジューリングは, シングルスレッドエグゼキュータでのスケジューリングとは大きく異なる 2 番目のケーススタディを使用して問題を示す
+\item すべてのコールバックは, mutually exclusive同じグループに割り当てられる
     \end{itemize}
 \end{frame}
 
