--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
@@ -15,7 +15,7 @@
         \item これは, 次の手順で実現される
         \item まず,  $J$ の実行を妨げる可能性のあるコールバックインスタンスの実行シーケンスを特定する
         \item 次に, $c_{i}$ をブロックできるかどうかに応じて, $J$ 内の個々のコールバックインスタンス $c_{i}$ に関して, $\Phi_{k, i}$ に寄与する可能性のあるシーケンス内のコールバックインスタンスを特定する手法を開発する
-        \item 次に, 探索空間を制限する制約を提示し, 最終的に $\mathcal{Q}_{k}$ の上限を取得する
+        \item 次に, 探索空間を制限する制約を提示し, 最終的に $\mathcal{Q}_{k}$ の上界を取得する
     \end{itemize}
 \end{frame}
 
@@ -25,7 +25,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item $L$ を $J$ の問題ウィンドウの長さとする
-        \item 補題 3 によると,  $J$ の問題期間中に実行できる $\mathcal{C}_{k}$ のチェーンインスタンスの最大数は $n_{k}(L)$ である
+        \item Lemma 3 によると,  $J$ の問題期間中に実行できる $\mathcal{C}_{k}$ のチェーンインスタンスの最大数は $n_{k}(L)$ である
         \item $\overrightarrow{\mathcal{M}}_{k}$ は, $\mathcal{C}_{k}$ の $n_{k}(L)$ チェーンインスタンスの実行シーケンスを表し, コールバックインスタンスを 1 つずつ順番に実行する
         \item 一般性を失うことなく,  $\overrightarrow{\mathcal{M}}_{k}$ が時間 0 で開始すると仮定する
         \item $\mathcal{C}_{k}$ から $J$ への超干渉シーケンスを $\overrightarrow{\mathcal{M}}_{k}$ と呼ぶ
@@ -53,7 +53,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item $J_{3}^{1}$ の問題ウィンドウの長さは 8 で, その間に $\mathcal{C}_{2}$ の最大 2 つのチェーンインスタンスが実行される可能性がある (補題 3 による)
+        \item $J_{3}^{1}$ の問題ウィンドウの長さは 8 で, その間に $\mathcal{C}_{2}$ の最大 2 つのチェーンインスタンスが実行される可能性がある (Lemma 3 による)
         \item $\mathcal{C}_{2}$ から $J_{3}^{1}$ までの超干渉シーケンス $\overrightarrow{\mathcal{M}}_{2}$ は, 図5の上部に示されている
         \item $\mathcal{C}_{2}$ から $J_{3}^{1}$ のサブ干渉シーケンスは, 図 5 の中央に示すように, それぞれ $\left\langle e_{2,2}^{\prime}\right\rangle$ と $\left\langle e_{2,1}^{\prime}\right\rangle$ であり, $(1,3)$ と $(3,4)$ のタイムウィンドウに入る $\overrightarrow{\mathcal{M}}_{2}$ の部分に対応する
         \item したがって, $\mathcal{C}_{2}$ から $J_{3}^{1}$ への干渉シーケンスは, 一連のウィンドウ $\mathcal{Y}=\{$ null, $(1,3)$, null, $(3,4)\}$ によって発生する
@@ -67,7 +67,7 @@
         \item ただし, そのようなウィンドウセットの検索空間は, 組み合わせ爆発になる可能性がある
         \item この問題を解決するために, 次に, サブ干渉シーケンスが $J$ のコールバックインスタンスに干渉するために満たさなければならない関連する制約を導き出す
         \item より具体的には, 考慮されるコールバックインスタンスをブロックできるかどうかに応じて, 2 つのケースを区別する
-        \item 次に, 考えられるすべての干渉シーケンスの中で発生する可能性のある $\mathcal{Q}_{k}$ の上限を効率的に取得するアルゴリズムを開発する
+        \item 次に, 考えられるすべての干渉シーケンスの中で発生する可能性のある $\mathcal{Q}_{k}$ の上界を効率的に取得するアルゴリズムを開発する
     \end{itemize}
 \end{frame}
 
@@ -77,7 +77,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 以下では, 再入可能なコールバックグループに属すコールバックインスタンス $c_{i}$ または $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ へのサブ干渉シーケンス, つまり $c_{i}$ をブロックできないことを検討する
+        \item 以下では, reentrant コールバックグループに属すコールバックインスタンス $c_{i}$ または $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ へのサブ干渉シーケンス, つまり $c_{i}$ をブロックできないことを検討する
         \item 一般に, 制約は 2 点に基づいて導出される
         \item まず, マルチスレッドエグゼキュータはバッチ内の異なるチェーンからのコールバックをスケジュールするため, $c_{i}$ は限られた数のバッチからのコールバックインスタンスによってのみ干渉される可能性がある
         \item 第 2 に, $c_{i}$ が $\Omega$ に追加されると, $\Omega$ 内のそれより優先度の高い他のコールバックインスタンスによってのみ遅延できる
@@ -86,7 +86,7 @@
 
 \begin{frame}{Lemma5}
     \begin{lemma}[]
-        $c_{i}$ が再入可能なコールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $\left[r_{i}, s_{i}\right)$ の時間間隔中にポーリングポイントが 1 つだけ存在する
+        $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $\left[r_{i}, s_{i}\right)$ の時間間隔中にポーリングポイントが 1 つだけ存在する
     \end{lemma}
 \end{frame}
 
@@ -96,7 +96,7 @@
 
 \begin{frame}{Lemma6}
     \begin{lemma}[]
-        $c_{i}$ が再入可能なコールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $\overrightarrow{\mathcal{M}}_{k}$ の最大 2 つの連続するコールバックインスタンスは, 時間間隔 $\left[r_{i}, s_{i}\right)$ 中に実行できる
+        $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $\overrightarrow{\mathcal{M}}_{k}$ の最大 2 つの連続するコールバックインスタンスは, 時間間隔 $\left[r_{i}, s_{i}\right)$ 中に実行できる
     \end{lemma}
 \end{frame}
 
@@ -106,7 +106,7 @@
 
 \begin{frame}{Lemma7}
     \begin{lemma}[]
-        $c_{i}$ が再入可能なコールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, 干渉チェーン $\mathcal{C}_{k}$ からの 2 つのコールバックインスタンスが $\left[r_{i}, s_{i}\right)$ の時間間隔中に実行される場合, 2 番目のインスタンスは $c_{i}$ よりも高い優先度を持つ必要がある
+        $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, 干渉チェーン $\mathcal{C}_{k}$ からの 2 つのコールバックインスタンスが $\left[r_{i}, s_{i}\right)$ の時間間隔中に実行される場合, 2 番目のインスタンスは $c_{i}$ よりも高い優先度を持つ必要がある
     \end{lemma}
 \end{frame}
 
@@ -117,7 +117,7 @@
 \begin{frame}{Lemma8}
     最後に, $m \geq|\Gamma|$ のときに直感的な制約を与えることができる
     \begin{lemma}[]
-        $m \geq|\Gamma|$ の場合, $c_{i}$ が再入可能なコールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $\left[r_{i}, s_{i}\right)$ の時間間隔中に $\mathcal{C}_{k}$ からのコールバックインスタンスは実行できない
+        $m \geq|\Gamma|$ の場合, $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, $\left[r_{i}, s_{i}\right)$ の時間間隔中に $\mathcal{C}_{k}$ からのコールバックインスタンスは実行できない
     \end{lemma}
 \end{frame}
 
@@ -150,7 +150,7 @@
 
 \begin{frame}{Lemma10}
     \begin{lemma}[]
-        上記の補題によると, $c_{i}$ と同じコールバックグループに属し, $c_{i}$ よりも優先度が低い $\mathcal{C}_{k}$ からのコールバックインスタンスは, $\left[r_{i}, s_{i}\right)$ 中に実行される $\mathcal{C}_{k}$ からの最初のコールバックインスタンスである場合にのみ, $\mathcal{I}_{i, k}^{\mathcal{B}}$ に貢献できる
+        上記のLemmaによると, $c_{i}$ と同じコールバックグループに属し, $c_{i}$ よりも優先度が低い $\mathcal{C}_{k}$ からのコールバックインスタンスは, $\left[r_{i}, s_{i}\right)$ 中に実行される $\mathcal{C}_{k}$ からの最初のコールバックインスタンスである場合にのみ, $\mathcal{I}_{i, k}^{\mathcal{B}}$ に貢献できる
     \end{lemma}
 \end{frame}
 
@@ -160,7 +160,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item $\mathcal{S}_{k, i}$ から $c_{i}$ へのサブ干渉シーケンスが与えられた場合, 以下で, $\mathcal{Q}_{k}$ への寄与の上限を計算する
+        \item $\mathcal{S}_{k, i}$ から $c_{i}$ へのサブ干渉シーケンスが与えられた場合, 以下で, $\mathcal{Q}_{k}$ への寄与の上界を計算する
     \end{itemize}
 \end{frame}
 
@@ -168,7 +168,7 @@
     \begin{itemize}
         \item 式 (2) から, $c_{i}$ をブロックできない場合は $\Phi_{k, i}=\mathcal{I}_{k, i}$, それ以外の場合は $\Phi_{k, i}=\mathcal{I}_{k, i}+(m-1) \mathcal{I}_{k, i}^{\mathcal{B}}-\mathcal{I}_{k, i}^{\mathcal{E}}$
         \item サブ干渉シーケンス $\mathcal{S}_{k, i}$ が与えられると, 定義により, $\mathcal{S}_{k, i}$ の各コールバックインスタンスの実行時間で $\mathcal{I}_{k, i}$ と $\mathcal{I}_{k, i}^{\mathcal{B}}$ を計算できる
-        \item したがって, $c_{i}$ が再入可能なコールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, つまり $c_{i}$ をブロックできない場合,  $\hat{\Phi}_{k, i}$ で示される $\Phi_{k, i}$ の上限を取得できる
+        \item したがって, $c_{i}$ がreentrant コールバックグループまたは $\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}: \mathcal{G}\left(c_{i}\right) \notin \theta_{k}$ に属している場合, つまり $c_{i}$ をブロックできない場合,  $\hat{\Phi}_{k, i}$ で示される $\Phi_{k, i}$ の上界を取得できる
     \end{itemize}
 
     \begin{equation*}
@@ -181,7 +181,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 特に, (3) の最初の項目は, 補題 8 に従って取得される
+        \item 特に, (3) の最初の項目は, Lemma 8 に従って取得される
         \item 同様に, $c_{i}$ がブロックされる可能性がある場合, つまり $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$ の場合, $\hat{\Phi}_{k, i}$ を次のように定義する
     \end{itemize}
 
@@ -206,10 +206,10 @@
     \begin{itemize}
         \item $\mathcal{Y}$ によって生じた干渉シーケンス $\mathcal{S}_{k}$ が与えられた場合, $\mathcal{Q}_{k}(\mathcal{Y})$ を使用して, 各サブ干渉シーケンス $\mathcal{S}_{k, i}$ に関する $\hat{\Phi}_{k, i}$ の合計を示し, $\mathcal{Q}_{k}(\mathcal{Y})$ は $\mathcal{Y}$ によって引き起こされたと言う
         \item 直感的に, ウィンドウのすべての可能な組み合わせを列挙できる
-        \item ここで, 結果として得られる各サブ干渉シーケンスは補題 6-10 を満たし, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を $\mathcal{Q}_{k}$ の安全な上限と見なする
+        \item ここで, 結果として得られる各サブ干渉シーケンスはLemma 6-10 を満たし, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を $\mathcal{Q}_{k}$ の安全な上界と見なする
         \item ただし, これは計算量の爆発になる可能性がある
         \item この問題を解決するために, 以下で最初に, ウィンドウの境界の検索スペースを $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの境界に制限できることを示す
-        \item 次に, 動的計画法 (DP) に基づくアルゴリズムを開発して, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ の上限を計算する
+        \item 次に, 動的計画法 (DP) に基づくアルゴリズムを開発して, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ の上界を計算する
     \end{itemize}
 \end{frame}
 
@@ -232,7 +232,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 補題 11 は, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を見つけるには, 境界が $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの開始/終了時間と一致するウィンドウのみを考慮する必要があることを示している
+        \item Lemma 11 は, $\max _{\forall \mathcal{Y}}\left\{\mathcal{Q}_{k}(\mathcal{Y})\right\}$ を見つけるには, 境界が $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの開始/終了時間と一致するウィンドウのみを考慮する必要があることを示している
         \item ただし, すべての可能な組み合わせの数は依然として非常に多い場合がある
         \item この問題をより効率的に解決するために, 動的計画法 (DP) に基づく方法を開発する
     \end{itemize}
@@ -241,17 +241,17 @@
 \begin{frame}{}
     \begin{itemize}
         \item 以下では, 最初にこの方法の重要な部分を紹介する
-        \item $p^{t h}$ の開始時間からの範囲内に境界を持つウィンドウによって生じる, すべての可能なサブ干渉シーケンスの中で, $\Phi_{k, i}$ から $c_{i}$ への上限を取得する方法コールバックインスタンスを $\overrightarrow{\mathcal{M}}_{k}$ の $q^{t h}$ コールバックインスタンスの開始時刻に合わせる
+        \item $p^{t h}$ の開始時間からの範囲内に境界を持つウィンドウによって生じる, すべての可能なサブ干渉シーケンスの中で, $\Phi_{k, i}$ から $c_{i}$ への上界を取得する方法コールバックインスタンスを $\overrightarrow{\mathcal{M}}_{k}$ の $q^{t h}$ コールバックインスタンスの開始時刻に合わせる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 手順をアルゴリズム 1 に示す
-        \item $p=q$ の場合, $\left[r_{i}, s_{i}\right)$ 中に $\mathcal{C}_{k}$ からのコールバックインスタンスを実行できないため, $\Phi_{k, i}$ の上限は 0 である
-        \item $c_{i}$ をブロックできる場合, 補題 9 を満たす各サブ干渉シーケンスを列挙し, 3 行目から 13 行目に示すように, 次の式 (4) によって $\hat{\Phi}_{k, i}$ (アルゴリズム 1 の $\operatorname{sum}[j]$ で示される) を計算する
-        \item それ以外の場合, 14 行目から 21 行目に示すように, 補題 6 ～ 8 を満たす各サブ干渉シーケンスを列挙し, 式 (3) に従って $\hat{\Phi}_{k, i}$ を計算する
-        \item 最後に, $\Phi_{k, i}^{p, q}$ の上限は, 考えられるすべてのサブ干渉シーケンスの中で $\hat{\Phi}_{k, i}$ の最大値を取得することによって取得される
+        \item $p=q$ の場合, $\left[r_{i}, s_{i}\right)$ 中に $\mathcal{C}_{k}$ からのコールバックインスタンスを実行できないため, $\Phi_{k, i}$ の上界は 0 である
+        \item $c_{i}$ をブロックできる場合, Lemma 9 を満たす各サブ干渉シーケンスを列挙し, 3 行目から 13 行目に示すように, 次の式 (4) によって $\hat{\Phi}_{k, i}$ (アルゴリズム 1 の $\operatorname{sum}[j]$ で示される) を計算する
+        \item それ以外の場合, 14 行目から 21 行目に示すように, Lemma 6 ～ 8 を満たす各サブ干渉シーケンスを列挙し, 式 (3) に従って $\hat{\Phi}_{k, i}$ を計算する
+        \item 最後に, $\Phi_{k, i}^{p, q}$ の上界は, 考えられるすべてのサブ干渉シーケンスの中で $\hat{\Phi}_{k, i}$ の最大値を取得することによって取得される
     \end{itemize}
 \end{frame}
 
@@ -267,7 +267,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 次に, $J$ の各コールバックに関してウィンドウのすべての組み合わせを検索し, 最後に $\mathcal{Q}_{k}$ の上限を計算する
+        \item 次に, $J$ の各コールバックに関してウィンドウのすべての組み合わせを検索し, 最後に $\mathcal{Q}_{k}$ の上界を計算する
         \item プロシージャの疑似コードをアルゴリズム 2 に示す
         \item ここで, $\left|\overrightarrow{\mathcal{M}}_{k}\right|$ は $\overrightarrow{\mathcal{M}}_{k}$ のコールバックインスタンスの数である
     \end{itemize}
@@ -288,18 +288,18 @@
         \item アルゴリズムは $i=|\mathcal{C}|$ で始まる
         \item 次に, $c_{|\mathcal{C}|}$ へのサブ干渉シーケンスのみが考慮されるため, $\Theta_{|\mathcal{C}|, p}=\max _{\forall q \in\left[p,\left|\overrightarrow{\mathcal{M}}_{k}\right|+1\right]}\left\{\Phi_{k, i}^{p, q}\right\}$
         \item この手順は, $\Theta_{1,1}$, つまり, $\overrightarrow{\mathcal{M}}_{k}$ の最初のコールバックインスタンスの開始時間から最後のコールバックインスタンスの終了時間までの範囲に収まるすべての可能なウィンドウによって発生する可能性のある最大 $\sum_{i=1}^{|\mathcal{C}|} \hat{\Phi}_{k, i}$ が取得されるまで繰り返される
-        \item つまり, $\Theta_{1,1}$ は $\mathcal{Q}_{k}$ の上限である
+        \item つまり, $\Theta_{1,1}$ は $\mathcal{Q}_{k}$ の上界である
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 例えば, 図5のC3のチェーンインスタンスに対して, -→M2のすべての可能な干渉配列によって引き起こされる可能性のあるQ2の上限は, 表IVに示されている.
+        \item 例えば, 図5のC3のチェーンインスタンスに対して, -→M2のすべての可能な干渉配列によって引き起こされる可能性のあるQ2の上界は, 表IVに示されている.
     \end{itemize}
 \end{frame}
 
 \begin{frame}{Theorem 2}
-    $L+e_{|\mathcal{C}|} \leq D$ の場合, $R(J)$ の上限は $L+e_{|\mathcal{C}|}$ である
+    $L+e_{|\mathcal{C}|} \leq D$ の場合, $R(J)$ の上界は $L+e_{|\mathcal{C}|}$ である
     ここで, $L$ は次の条件を満たす最小数である
 
     \begin{equation*}
@@ -314,7 +314,7 @@
 \end{frame}
 
 \begin{frame}{Theorem3}
-    $L+e_{|\mathcal{C}|} \leq D$ が $\mathcal{C} \in \Gamma$ のチェーンごとに成立し, $L$ が定理 1 または 2 によって取得される場合, $\Gamma$ はスケジュール可能である
+    $L+e_{|\mathcal{C}|} \leq D$ が $\mathcal{C} \in \Gamma$ のチェーンごとに成立し, $L$ がTheorem 1 または 2 によって取得される場合, $\Gamma$ はスケジュール可能である
 \end{frame}
 
 \begin{frame}{Theorem3 証明}
