--- a/setting.tex
+++ b/setting.tex
@@ -14,6 +14,7 @@
 \usepackage{ifthen}
 \usepackage{graphics}
 \usepackage{hyperref}
+\usepackage{fancybox}
 
 
 %%%%% Settings %%%%%
@@ -112,6 +113,8 @@
 \setbeamercolor{block title example}{fg=black,bg=cobalt!20}
 \setbeamercolor{block body example}{fg=black!80,bg=white}
 % -- Definition --
+\undef{\definition}
+\newtheorem{definition}{\translate{Definition}}
 \BeforeBeginEnvironment{definition}{
     \setbeamercolor{block title}{use=alerted text, bg=alerted text.fg!40,fg=black}
     \setbeamercolor{block body}{use=alerted text, fg=black!80,bg=white}
@@ -154,6 +157,9 @@
 \newcommand{\al}[1]{\alert{#1}}
 \newcommand{\tu}[1]{\textbf{\underline{#1}}}
 \newcommand{\notes}[1]{{\footnotesize\\※#1}}
+\newcommand{\db}[1]{\doublebox{#1}}
+\setlength{\fboxsep}{0.4mm}
+\newcommand{\desc}[2]{\textbf{\doublebox{#1}: }#2}
 \newcommand{\full}[1]{
     \centering
     \begin{columns}
